docs/stylesheets/extra.css
[data-md-color-scheme="pytx2025_light"] {
    --logo-gray: #959595;
    --logo-light-gray: #b8b8b8;
    --logo-yellow: #ffdd67;
    --dark-yellow: #f7c000;
    --python-dark-blue: #306998;
    --light-blue: #46A1EC;
    --background-color: #ffffff;
    --primary-background-color: #000000;

    --md-primary-fg-color: var(--primary-background-color);
    --md-default-fg-color: var(--background-color);
    --md-primary-fg-color--light: var(--python-dark-blue);
    --md-default-fg-color--light: var(--python-dark-blue);
    --md-primary-fg-color--dark: var(--dark-yellow);
    --md-default-fg-color--dark: var(--dark-yellow);
    --md-typeset-a-color: var(--python-dark-blue);
    --md-primary-fg-color--transparent: var(--dark-yellow);
    --md-primary-bg-color: var(--background-color);
    --md-primary-bg-color--transparent: var(--dark-yellow);
    --md-default-bg-color: #1B211C;
    --md-accent-fg-color: var(--python-dark-blue);
    --md-accent-fg-color--transparent: var(--dark-yellow);
    --md-accent-a-color: var(--dark-yellow);
    --md-accent-bg-color: var(--dark-yellow);
    --md-table-head-color: var(--dark-yellow);
    --md-table-head-font: var(--primary-background-color);
}

[data-md-color-scheme="pytx2025"] {
    --logo-gray: #959595;
    --logo-light-gray: #b8b8b8;
    --logo-yellow: #ffdd67;
    --dark-yellow: #f7c000;
    --python-dark-blue: #306998;
    --light-blue: #46A1EC;
    --background-color: #000000;
    --primary-background-color: #ffffff;

    --md-primary-fg-color: var(--primary-background-color);
    --md-default-fg-color: var(--background-color);
    --md-primary-fg-color--light: var(--python-dark-blue);
    --md-default-fg-color--light: var(--python-dark-blue);
    --md-primary-fg-color--dark: var(--dark-yellow);
    --md-default-fg-color--dark: var(--dark-yellow);
    --md-typeset-a-color: var(--python-dark-blue);
    --md-primary-fg-color--transparent: var(--dark-yellow);
    --md-primary-bg-color: var(--background-color);
    --md-primary-bg-color--transparent: var(--dark-yellow);
    --md-default-bg-color: #929292;
    --md-accent-fg-color: var(--dark-yellow);
    --md-accent-fg-color--transparent: var(--dark-yellow);
    --md-accent-a-color: var(--light-blue);
    --md-accent-bg-color: #2b2b2b;
    --md-table-head-color: var(--dark-yellow);
    --md-table-head-font: var(--background-color);
}

[data-md-color-scheme="pytx2025_light"] div[class~="hide-if-light"] {
    display: none;
}

[data-md-color-scheme="pytx2025"] div[class~="hide-if-dark"] {
    display: none;
}

[data-md-color-scheme="pytx2025_light"] div[class~="hide-if-dark"]>svg {
    max-height: 24rem;
}

[data-md-color-scheme="pytx2025"] div[class~="hide-if-light"]>svg {
    max-height: 24rem;
}

[data-md-color-scheme="pytx2025_light"] div[class~="pytx-container"] {
    background: linear-gradient(to bottom, black, white);
}

figcaption {
    color: var(--md-primary-fg-color);
    padding: 1rem;
}

figcaption>a {
    color: var(--md-accent-fg-color);
}

figcaption>a:hover,
a:focus {
    color: var(--md-accent-a-color);
}

.md-container {
    background: var(--md-primary-fg-color);
    color: var(--md-primary-bg-color);
}

.md-typeset h1 {
    color: var(--md-primary-bg-color);
    font-size: 2em;
    line-height: 1.3;
    margin: 0 0 1.25em;
}

.md-nav--lifted>.md-nav__list>.md-nav__item--active>.md-nav__link {
    background: var(--md-primary-fg-color);
    box-shadow: 0 0 .4rem .4rem var(--md-primary-fg-color);
    font-weight: 700;
    margin-top: 0;
    padding: 0 .6rem;
    position: sticky;
    top: 0;
    z-index: 1;
}

.md-nav--secondary .md-nav__title {
    background: unset;
    box-shadow: unset;
}

.md-nav__item .md-nav__link--active,
.md-nav__item .md-nav__link--active code {
    color: var(--md-primary-fg-color--light);
}

.md-nav__list {
    background-color: var(--md-primary-fg-color) !important;
}


.md-typeset table:not([class]) {
    background-color: var(--md-primary-fg-color);
    width: 100%;
}

thead {
    background-color: var(--md-table-head-color);
    color: var(--md-table-head-font);
    font-size: 1.15em;
}

.md-typeset details.question {
    border-color: var(--md-accent-a-color);
}

.md-typeset .question>summary::before,
.md-typeset .question>summary::after {
    background-color: var(--md-accent-a-color);
}

.md-typeset .question>summary {
    background-color: var(--logo-yellow);
}

.pytx-container {
    background: var(--md-primary-bg-color);
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    height: 100%;
    padding-top: .5rem;
}

.pytx-hero {
    margin: 0;
    color: var(--md-primary-bg-color);
    justify-content: center;
}

.pytx-hero__content {
    padding-bottom: 2rem;
    margin: 0 auto;
}

.pytx-hero__image {
    align-self: center;
    order: 0;
    max-height: 25rem;
    padding-bottom: 1rem;
}

.pytx-button {
    border-radius: 6px;
    box-sizing: border-box;
    color: var(--md-primary-bg-color);
    display: inline;
    font-size: 1.1rem;
    margin: 0 0.5rem;
    overflow: hidden;
    padding: 0.5rem;
    position: relative;
    text-align: center;
    width: 100%;
    z-index: 2;
}

.pytx-button--primary {
    background-color: var(--md-primary-fg-color--dark);
    color: var(--md-primary-bg-color) !important;
}

.pytx-button:focus,
.pytx-button:hover {
    background-color: var(--md-primary-fg-color--light);
    color: var(--md-primary-bg-color);
}

.pytx-prospectus-graph {
    width: 49%;
}

.pytx-prospectus-graph-lg {
    width: 80%;
}

.glow {
    animation: glow 1s ease alternate infinite;
}

@keyframes glow {
    from {
        filter: drop-shadow(0px 4px 4px #FFFFFF);
    }

    to {
        filter: drop-shadow(0px 6px 10px #FFDD67);
    }
}

.md-search-result__meta {
    background-color: var(--primary-background-color) !important;
    color: var(--md-default-fg-color--light);
}

.md-search-result {
    background-color: var(--primary-background-color) !important;
}

